--- a/api-reference/latest/alert-definitions-service/create-an-alert.mdx
+++ b/api-reference/latest/alert-definitions-service/create-an-alert.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v3/alert-defs
+openapi: /../../openapi_latest.yaml post /alerts/alerts-general/v3
 ---
