--- a/api-reference/latest/alert-definitions-service/deletealertdef.mdx
+++ b/api-reference/latest/alert-definitions-service/deletealertdef.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /v3/alert-defs/{id}
+openapi: /../../openapi_latest.yaml delete /alerts/alerts-general/v3/{id}
 ---
