--- a/api-reference/latest/alert-definitions-service/disable-or-enable-an-alert.mdx
+++ b/api-reference/latest/alert-definitions-service/disable-or-enable-an-alert.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v3/alert-defs/{id}:setActive
+openapi: /../../openapi_latest.yaml post /alerts/alerts-general/v3/{id}:setActive
 ---
