--- a/api-reference/latest/alert-definitions-service/download-alerts.mdx
+++ b/api-reference/latest/alert-definitions-service/download-alerts.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v3/alerts/download
+openapi: /../../openapi_latest.yaml get /alerts/alerts-general/v3/download
 ---
