--- a/api-reference/latest/alert-definitions-service/get-alert-definition-by-id.mdx
+++ b/api-reference/latest/alert-definitions-service/get-alert-definition-by-id.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v3/alert-defs/{id}
+openapi: /../../openapi_latest.yaml get /alerts/alerts-general/v3/{id}
 ---
