--- a/api-reference/latest/atomicbatchcreatepolicy.mdx
+++ b/api-reference/latest/atomicbatchcreatepolicy.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/policies:bulkCreate
+openapi: /../../openapi_latest.yaml post /dataplans/policies/v1/bulkCreate
 ---
