--- a/api-reference/latest/atomicoverwritespanpolicies.mdx
+++ b/api-reference/latest/atomicoverwritespanpolicies.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/policies:atomicOverwriteSpanPolicies
+openapi: /../../openapi_latest.yaml post /dataplans/policies/v1/atomicOverwriteSpanPolicies
 ---
