--- a/api-reference/latest/bulktestlogpolicies.mdx
+++ b/api-reference/latest/bulktestlogpolicies.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/policies:bulkTestLog
+openapi: /../../openapi_latest.yaml post /dataplans/policies/v1/bulkTestLog
 ---
