--- a/api-reference/latest/configuretenant.mdx
+++ b/api-reference/latest/configuretenant.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/metrics-archive
+openapi: /../../openapi_latest.yaml post /metrics/data-setup/v1
 ---
