--- a/api-reference/latest/delete.mdx
+++ b/api-reference/latest/delete.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /metrics-tco/delete
+openapi: /../../openapi_latest.yaml delete /v1/rule-group-sets/{id}
 ---
