--- a/api-reference/latest/deletepolicy.mdx
+++ b/api-reference/latest/deletepolicy.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /v1/policies/{id}
+openapi: /../../openapi_latest.yaml delete /dataplans/policies/v1/{id}
 ---
