--- a/api-reference/latest/disablearchive.mdx
+++ b/api-reference/latest/disablearchive.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/metrics-archive:disable
+openapi: /../../openapi_latest.yaml post /metrics/data-setup/v1/disable
 ---
