--- a/api-reference/latest/getpolicy.mdx
+++ b/api-reference/latest/getpolicy.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/policies/{id}
+openapi: /../../openapi_latest.yaml get /dataplans/policies/v1/{id}
 ---
