--- a/api-reference/latest/gettenantconfig.mdx
+++ b/api-reference/latest/gettenantconfig.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/metrics-archive
+openapi: /../../openapi_latest.yaml get /metrics/data-setup/v1
 ---
