--- a/api-reference/latest/scopes-service/delete-scope.mdx
+++ b/api-reference/latest/scopes-service/delete-scope.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /v1/scopes/{id}
+openapi: /../../openapi_latest.yaml delete /aaa/team-scopes/v1/{id}
 ---
