--- a/api-reference/latest/togglepolicy.mdx
+++ b/api-reference/latest/togglepolicy.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/policies:toggle
+openapi: /../../openapi_latest.yaml post /dataplans/policies/v1/toggle
 ---
