--- a/api-reference/latest/update.mdx
+++ b/api-reference/latest/update.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v1/metrics-archive
+openapi: /../../openapi_latest.yaml put /metrics/data-setup/v1
 ---
