--- a/introduction-lts.mdx
+++ b/introduction-lts.mdx
@@ -23,7 +23,7 @@ You can download the API spec from https://api.coralogix.com/mgmt/openapi/openap
 | **Data Usage** | Coralogix Data Usage provides detailed insights into your observability data consumption patterns. |  [Data Usage](https://docs.coralogix.com/api-reference/lts/data-usage-service/overview) |
 | **Enrichment** | Coralogix Enrichment enhances your observability data with contextual information from multiple sources. |  [Custom Enrichments](https://docs.coralogix.com/api-reference/lts/custom-enrichments-service/overview)<br /> [Enrichment service](https://docs.coralogix.com/api-reference/lts/enrichments-service/overview) |
 | **Logs2Metrics** | Coralogix Logs2Metrics transforms log events into actionable metrics for enhanced monitoring. |  [Events2Metrics](https://docs.coralogix.com/api-reference/lts/events2metrics-service/overview) |
-| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. |  [API Keys](https://docs.coralogix.com/api-reference/lts/api-keys-service/overview)<br /> [Team Permissions Management](https://docs.coralogix.com/api-reference/lts/team-permissions-management-service/overview)<br /> [SAML Configuration](https://docs.coralogix.com/api-reference/lts/saml-configuration-service/overview) |
+| **Permissions** | Coralogix Permissions provide granular role-based access control to secure your observability data. |  [API Keys](https://docs.coralogix.com/api-reference/lts/api-keys-service/overview)<br /> [Team Permissions Management](https://docs.coralogix.com/api-reference/lts/team-permissions-management-service/overview)<br /> [SAML Configuration](https://docs.coralogix.com/api-reference/lts/saml-configuration-service/overview)<br /> [IP Access](https://docs.coralogix.com/api-reference/lts/ip-access-service/overview) |
 | **Quota** | Coralogix Quota provides resource allocation and usage enforcement to optimize platform utilization. |  [Policies](https://docs.coralogix.com/api-reference/lts/policies-service/overview) |
 | **Scopes** | Coralogix Scopes provide data isolation and access control through logical data partitioning. |  [Scopes](https://docs.coralogix.com/api-reference/lts/scopes-service/overview) |
 | **Views** | Coralogix Views allow you to save and organize filtered data queries for fast access and shared analysis. |  [Views](https://docs.coralogix.com/api-reference/lts/views-service/list-views-service/overview)<br /> [View folders](https://docs.coralogix.com/api-reference/lts/folders-for-views-service/overview) |
