--- a/api-reference/latest/custom-enrichments-service/delete-custom-enrichments.mdx
+++ b/api-reference/latest/custom-enrichments-service/delete-custom-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /v1/custom_enrichment/{custom_enrichment_id}
+openapi: /../../openapi_latest.yaml delete /enrichment-rules/custom-enrichment-rules/v1/{custom_enrichment_id}
 ---
