--- a/api-reference/latest/custom-enrichments-service/get-custom-enrichment.mdx
+++ b/api-reference/latest/custom-enrichments-service/get-custom-enrichment.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/custom_enrichment/{id}
+openapi: /../../openapi_latest.yaml get /enrichment-rules/custom-enrichment-rules/v1/{id}
 ---
