--- a/api-reference/latest/custom-enrichments-service/get-custom-enrichments.mdx
+++ b/api-reference/latest/custom-enrichments-service/get-custom-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/custom_enrichment
+openapi: /../../openapi_latest.yaml get /enrichment-rules/custom-enrichment-rules/v1
 ---
