--- a/api-reference/latest/custom-enrichments-service/update-custom-enrichment.mdx
+++ b/api-reference/latest/custom-enrichments-service/update-custom-enrichment.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v1/custom_enrichment
+openapi: /../../openapi_latest.yaml put /enrichment-rules/custom-enrichment-rules/v1
 ---
