--- a/api-reference/latest/enrichments-service/add-enrichments.mdx
+++ b/api-reference/latest/enrichments-service/add-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /enrichments
+openapi: /../../openapi_latest.yaml post /enrichment-rules/enrichment-rules/v1
 ---
