--- a/api-reference/latest/enrichments-service/atomic-overwrite-enrichments.mdx
+++ b/api-reference/latest/enrichments-service/atomic-overwrite-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml patch /enrichments:atomicOverwrite
+openapi: /../../openapi_latest.yaml put /enrichment-rules/enrichment-rules/v1
 ---
