--- a/api-reference/latest/enrichments-service/delete-enrichments.mdx
+++ b/api-reference/latest/enrichments-service/delete-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /enrichments
+openapi: /../../openapi_latest.yaml delete /enrichment-rules/enrichment-rules/v1
 ---
