--- a/api-reference/latest/enrichments-service/get-company-enrichment-settings.mdx
+++ b/api-reference/latest/enrichments-service/get-company-enrichment-settings.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /enrichments/settings
+openapi: /../../openapi_latest.yaml get /enrichment-rules/enrichment-rules/v1/settings
 ---
