--- a/api-reference/latest/enrichments-service/get-enrichment-limit.mdx
+++ b/api-reference/latest/enrichments-service/get-enrichment-limit.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /enrichments/limit
+openapi: /../../openapi_latest.yaml get /enrichment-rules/enrichment-rules/v1/limit
 ---
