--- a/api-reference/latest/enrichments-service/get-enrichments.mdx
+++ b/api-reference/latest/enrichments-service/get-enrichments.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /enrichments
+openapi: /../../openapi_latest.yaml get /enrichment-rules/enrichment-rules/v1
 ---
