--- a/api-reference/latest/folders-for-views-service/create-view-folder-service.mdx
+++ b/api-reference/latest/folders-for-views-service/create-view-folder-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/view_folders
+openapi: /../../openapi_latest.yaml post /data-exploration/saved-views/v1/folders
 ---
