--- a/api-reference/latest/folders-for-views-service/get-view-folder-service.mdx
+++ b/api-reference/latest/folders-for-views-service/get-view-folder-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/view_folders/{id}
+openapi: /../../openapi_latest.yaml get /data-exploration/saved-views/v1/folders/{id}
 ---
