--- a/api-reference/latest/folders-for-views-service/list-view-folders-service.mdx
+++ b/api-reference/latest/folders-for-views-service/list-view-folders-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/view_folders
+openapi: /../../openapi_latest.yaml get /data-exploration/saved-views/v1/folders
 ---
