--- a/api-reference/latest/folders-for-views-service/replace-view-folder-service.mdx
+++ b/api-reference/latest/folders-for-views-service/replace-view-folder-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /v1/view_folders/{folder.id}
+openapi: /../../openapi_latest.yaml put /data-exploration/saved-views/v1/folders
 ---
