--- a/api-reference/latest/views-service/create-a-view-service.mdx
+++ b/api-reference/latest/views-service/create-a-view-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml post /v1/views
+openapi: /../../openapi_latest.yaml post /data-exploration/saved-views/v1
 ---
