--- a/api-reference/latest/views-service/get-view-service.mdx
+++ b/api-reference/latest/views-service/get-view-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/views/{id}
+openapi: /../../openapi_latest.yaml get /data-exploration/saved-views/v1/{id}
 ---
