--- a/api-reference/latest/views-service/list-views-service.mdx
+++ b/api-reference/latest/views-service/list-views-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/views
+openapi: /../../openapi_latest.yaml get /data-exploration/saved-views/v1
 ---
