--- a/api-reference/latest/events-service/batch-get-event.mdx
+++ b/api-reference/latest/events-service/batch-get-event.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v3/events/events:batchGet
+openapi: /../../openapi_latest.yaml get /alerts/events/v3/batch
 ---
