--- a/api-reference/latest/events-service/get-events-statistics.mdx
+++ b/api-reference/latest/events-service/get-events-statistics.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v3/events:statistics
+openapi: /../../openapi_latest.yaml get /alerts/events/v3/statistics
 ---
