--- a/api-reference/latest/team-permissions-management-service/get-team-group-scope.mdx
+++ b/api-reference/latest/team-permissions-management-service/get-team-group-scope.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /v1/teams/groups/{group_id.id}/scope
+openapi: /../../openapi_latest.yaml get /v1/teams/groups/{id}/scope
 ---
