--- a/api-reference/latest/team-permissions-management-service/get-team-group.mdx
+++ b/api-reference/latest/team-permissions-management-service/get-team-group.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml get /aaa/team-groups/v1/{group_id.id}
+openapi: /../../openapi_latest.yaml get /aaa/team-groups/v1/{id}
 ---
