--- a/api-reference/latest/team-permissions-management-service/remove-users-from-team-group.mdx
+++ b/api-reference/latest/team-permissions-management-service/remove-users-from-team-group.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml delete /aaa/team-groups/v1/{group_id.id}/users
+openapi: /../../openapi_latest.yaml delete /aaa/team-groups/v1/{id}/users
 ---
