--- a/api-reference/latest/views-service/replace-a-view-service.mdx
+++ b/api-reference/latest/views-service/replace-a-view-service.mdx
@@ -1,3 +1,3 @@
 ---
-openapi: /../../openapi_latest.yaml put /data-exploration/saved-views/v1/{view.id}
+openapi: /../../openapi_latest.yaml put /data-exploration/saved-views/v1/{id}
 ---
