--- a/service-overviews-lts/api-keys-service-overview.mdx
+++ b/service-overviews-lts/api-keys-service-overview.mdx
@@ -1,7 +1,7 @@
 # API Keys service overview
 
 Coralogix API Keys provide secure, fine-grained access control for all platform APIs, enabling safe and auditable integrations with third-party systems, CI/CD pipelines, and automation scripts. The API Keys API allows users to programmatically create, retrieve, update, and delete API keys, each scoped with specific permissions or permission presets. Keys can be assigned to users, teams, or organizations, and tailored with granular read/write permissions across various services.
-
+Learn more in our [API Keys](https://coralogix.com/docs/user-guides/account-management/api-keys/api-keys/) documentation.
 
 ## Examples
 
